<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_donate" android:title="@string/action_donate"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_rate" android:title="@string/action_rate"
        android:orderInCategory="100" app:showAsAction="never" android:visible="false" />
    <item android:id="@+id/exit_settings" android:title="@string/exit_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
