<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/about_card"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/profile_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/about_card"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/app_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:tooltipText="Click to Rate!"
                    android:src="@drawable/ic_wc_low" />


                <TextView
                    android:id="@+id/about_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif"
                    android:text="@string/app_name"
                    android:gravity="center"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/about_version"
                    style="@android:style/TextAppearance.DeviceDefault"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/about_version"
                    android:fontFamily="sans-serif"
                    android:text="Version" />




                <!--<LinearLayout-->
                <!--android:id="@+id/layout_btn"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:layout_marginBottom="5dip"-->
                <!--android:layout_marginLeft="5dip"-->
                <!--android:layout_marginRight="5dip"-->
                <!--android:layout_marginTop="5dip"-->
                <!--android:layout_weight=".75"-->
                <!--android:orientation="horizontal"-->
                <!--android:weightSum="2">-->

                <!--<Button-->
                <!--android:id="@+id/btn_email"-->
                <!--style="@android:style/TextAppearance.DeviceDefault"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:layout_marginRight="10dip"-->
                <!--android:layout_weight="1"-->
                <!--android:background="@drawable/button_about"-->
                <!--android:text="Email"-->
                <!--android:textColor="#fff" />-->

                <!--<Button-->
                <!--android:id="@+id/btn_review"-->
                <!--style="@android:style/TextAppearance.DeviceDefault"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:layout_marginLeft="10dip"-->
                <!--android:layout_weight="1"-->
                <!--android:background="@drawable/button_about"-->
                <!--android:text="Review"-->
                <!--android:textColor="#fff" />-->
                <!--</LinearLayout>-->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="@dimen/about_card"
                    android:background="@color/about_color" />

                <ImageView
                    android:id="@+id/circleImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_studio_profile"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="centerInside" />

                <TextView
                    android:id="@+id/dev_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="6dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/text_studio"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/text_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/about_card"
                    android:layout_marginRight="@dimen/about_card"
                    android:layout_marginBottom="@dimen/about_card"
                    android:layout_marginTop="@dimen/about_card"
                    android:gravity="center"
                    android:textSize="@dimen/textSize"
                    android:fontFamily="sans-serif"
                    android:text="@string/about_me"
                    android:textColor="#757575" />

                <ImageButton
                    android:id="@+id/btn_donate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/AppIntroButtonStyleCompat"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:layout_marginBottom="@dimen/about_card2"
                    android:src="@drawable/ic_donate"
                    android:tooltipText="Ad-Free Donate"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_mail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:tooltipText="Send E-Mail"
                        app:srcCompat="@drawable/ic_gmail" />

                    <ImageView
                        android:id="@+id/img_gplus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:tooltipText="Google+"
                        app:srcCompat="@drawable/ic_gplus" />
                    <ImageView
                        android:id="@+id/img_insta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:tooltipText="Instagram"
                        app:srcCompat="@drawable/ic_insta" />
                    <ImageView
                        android:id="@+id/img_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tooltipText="Share Toggle Track"
                        app:srcCompat="@drawable/ic_share" />


                </LinearLayout>

                <TextView
                    android:id="@+id/text_email"
                    style="@android:style/TextAppearance.DeviceDefault.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/string_email"
                    android:textIsSelectable="true"
                    android:fontFamily="sans-serif"
                    android:paddingTop="@dimen/about_card2"
                    android:paddingBottom="@dimen/about_card2"/>

                <!--<TextView-->
                <!--android:id="@+id/about_license"-->
                <!--style="@android:style/TextAppearance.DeviceDefault.Small"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:gravity="center"-->
                <!--android:fontFamily="sans-serif"-->
                <!--android:alpha="0.5"-->
                <!--android:text="@string/apache" />-->

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>